# LitioMuerto

./: LICENSE  Makefile  Makefile.am  README.md  configure.ac  constants.f90  main.f90  types.f90
examples/: 1a.xyz  input
src/: Constants.F90  Errors.f90  Makefile.am  Random.F90  main.f90  types.f90
test/: entrada.lm
